styles/_header.scss
header {
    max-width: 1600px;
    width: 100%;
    min-height: 800px;
    background-image:
    linear-gradient(216deg, rgba(126,90,255,1) 0%, rgba(85,183,255,0.7038165608040091) 49%),
    url(../images/background-header.png);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
}

nav {
    max-width: 1170px;
    width: 100%;
    margin-top: 53px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: row;
}

.nav-logo {
    width: 241px;
    height: 54px;
}

.navigation {
    max-width: 515px;
    width: 100%;
    
    & ul {
        list-style: none;
        display: inline-flex;
        justify-content: space-between;
        max-width: 515px;
        width: 100%;
    }

    &li {
        text-decoration: none;
        font-family: $source-sans-pro;
        font-size: 14px;
        color: $white-text;
        &:hover {
            color: $title-text;
        }
        &:focus {
            color: $title-text;
        }    

    }

    & a {
        text-decoration: none;
        font-family: $source-sans-pro;
        font-size: 14px;
        color: $white-text;
        &:hover {
            color: $title-text;
        }
        &:focus {
            color: $title-text;
        }
    }
}

.fa-circle {
    font-size: 8px;
    margin-right: 14px;
}


.nav-social>a {
    text-decoration: none;
    margin-right: 20px;
    &:last-of-type {
        margin-right: 0px;
    }
}


.social-icon {
    font-size: 40px;
    color: $white-text;
    display: inline-flex;
    justify-content: flex-start;
    align-items: center;
    border: none;
    text-decoration: none;
    background-color: transparent;
    &:hover {
        color: $title-text;
    }
    &:focus {
        color: $title-text;
    }
}

.header__slick-slider {
    margin-left: 30px;
    margin-right: 30px;
    margin-top: 100px;
    margin-bottom: 30px;
    max-width:917px;
    width: 100%;
    height: 420px;
    text-align: center;
}

.header__slick-title {
    font-family: $montserrat;
    font-weight: 700;
    font-size: 80px; 
    color: $black-text;
    text-align: center;
    letter-spacing: 0.1em;
}

.header__slick-subtitle {
    font-family: $montserrat;
    font-size: 18px;
    letter-spacing: 0.3em;
    line-height: 22px;
    color: $white-text;
    text-align: center;
    margin-top: 20px;
}




.slick-dots {
    display: flex;
    justify-content:flex-start;
    align-items: flex-end;
    flex-direction: column;
}

.slide-content {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.header__nav-down-btn:hover {
    color: $title-text;
}

.header__nav-down-btn:focus {
    color: $title-text;
}

.nav-btn {
    width: 40px;
    height: 40px;
    border: none;
    background-color: transparent;
    border-radius: 50%;
    border: 1px solid $white-text;
    margin-bottom: 50px;
    &:hover {
        border: 2px solid $title-text;
    }
    &:focus {
        border: 2px solid $title-text;
    }
}

.down-arrow {
    color: $white-text;
    border: $white-text;
    &:hover {
        color: $title-text;
    }
    &:focus {
        color: $title-text;
    }
}

